fixed proposed project list box overflow

--- a/supervisor/css/supervisor_project_proposal_management.css
+++ b/supervisor/css/supervisor_project_proposal_management.css
@@ -72,6 +72,8 @@
   border-radius: 10px;
   margin-top: 2rem;
   color: white;
+  width: 500px;
+  overflow-wrap: break-word;
 }
 
 .proposed-project-list span {
